# kekpool-miner

./: CMakeLists.txt  README.md
Linux/demo/: quickbench.c  simulation.c  solver.c
Windows/: LICENSE.txt  proc_ehsolver.asm  sim1.asm  test.asm
